# opengl-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  main  main.cc
include/: ambient_occlusion.hh  boids.hh  camera.hh  deferred.hh  deferred_shading.hh  directional_light.hh  light.hh  material.hh  mesh.hh  model.hh  normal_material.hh  point_light.hh  program.hh  scene.hh  skybox.hh  textured_material.hh  util.hh  water.hh
scenes/: scene_01.json  scene_boids.json  scene_boids_easy.json
shaders/: clipped_fragment.glsl  clipped_vertex.glsl  deferred_fragment.glsl  deferred_vertex.glsl  depth_vertex.glsl  fast_fragment.glsl  fragment.glsl  main.fs.glsl  point_shadow_vertex.glsl  shadow_fragment.glsl  shadow_vertex.glsl  shadowless_main.fs.glsl  shadowless_main.vs.glsl  vertex.glsl  water_fragment.glsl  water_vertex.glsl
shaders/boids/: boids.cs.glsl  boids.fs.glsl  boids.gs.glsl
shaders/deferred/: deferred.fs.glsl  deferred.vs.glsl  deferred_boid.vs.glsl
shaders/occlusion/: main.fs.glsl  main.vs.glsl
shaders/shadows/: directional_shadow_boid.vs.glsl  point_shadow.fs.glsl  point_shadow.gs.glsl  point_shadow.vs.glsl  point_shadow_boid.vs.glsl
shaders/skybox/: skybox.fs.glsl  skybox.vs.glsl
shaders/water/: fog.fs.glsl  fog.vs.glsl  reflection.vs.glsl  underwater.fs.glsl  underwater.vs.glsl  water.fs.glsl  (+4 more)
src/: ambient_occlusion.cc  boids.cc  camera.cc  deferred.cc  directional_light.cc  glad.c  light.cc  main.cc  mesh.cc  model.cc  normal_material.cc  point_light.cc  program.cc  scene.cc  skybox.cc  textured_material.cc  util.cc  water.cc
